# hibp-downloader

./: .flake8  .gitignore  .readthedocs.yml  .safety-policy.yml  404.html  LICENSE  Makefile  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.agent/: README.md
.agent/context/: architecture-decisions.md
.agent/rules/: conventions.md  dev-directory.md  environment.md
.agent/skills/architect-review/: SKILL.md
.agent/skills/code-reviewer/: SKILL.md
.agent/skills/karpathy-guidelines/: SKILL.md
.agent/skills/python-patterns/: SKILL.md
.agent/skills/python-pro/: SKILL.md
.agent/skills/vulnerability-scanner/: SKILL.md  checklists.md
.agent/skills/vulnerability-scanner/scripts/: security_scan.py
.agent/workflows/: development.md  release-process.md
.agent/workflows/scripts/: bump_semver_patch.py
.github/workflows/: build-tests.yml  docs.yml
assets/css/: extra.css
command/download/: index.html
command/generate/: index.html
command/query/: index.html
command/validate/: index.html
development/: index.html
docs/: build.novella  mkdocs.yml  pyproject.toml
docs/content/: development.md  index.md  license.md  project.md
docs/content/command/: download.md  generate.md  query.md
docs/docs/: development.md  index.md  license.md  project.md
docs/docs/command/: download.md  generate.md  query.md  validate.md
license/: index.html
project/: index.html
search/: search_index.json
src/hibp_downloader/: __init__.py  exceptions.py  main.py
src/hibp_downloader/commands/: hibp_download.py  hibp_generate.py  hibp_query.py  hibp_validate.py
src/hibp_downloader/lib/: app.py  filedata.py  generators.py  hashing.py  http.py  logger.py  md4.py
src/hibp_downloader/models/: __init__.py  app_context.py  hash_type.py  prefix_metadata.py  stats.py  worker_args.py
tests/: test_import.py
tests/helpers/: content_inspect.py  exec_helpers.py
tests/test_01_import/: test_lib_utils.py  test_validation.py
tests/test_02_exec/: test_exec_download.py  test_exec_download_cache.py  test_exec_download_ttl.py  test_exec_generate.py  test_exec_help.py  test_exec_query.py  test_exec_validate.py
